deleted old createElement and added a margin around each list item to space them out

--- a/css/main.css
+++ b/css/main.css
@@ -49,6 +49,12 @@ label, input {
 
 }
 
+li {
+  margin: 30px;
+  list-style-type: none;
+
+}
+
 #form-title {
   color: #8B8C8C;
   margin-bottom: 50px;
